@@ -1,5 +1,10 @@
 2011-10-19  Jason Merrill  <jason@redhat.com>
 
+	PR c++/50793
+	* g++.dg/init/value9.C: New.
+
+2011-10-19  Jason Merrill  <jason@redhat.com>
+
 	PR c++/50787
 	* g++.dg/init/ref20.C: New.
 
